// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GradleInstaller installAgent transforms buildscript.gradle as expected 1`] = `
"buildscript {
    repositories {
        mavenCentral()
    }
}

plugins {
    id 'com.appland.appmap' version '1.1.0'
}

repositories {
    mavenCentral()
}


application {
    mainClass = 'demo.App'
}
"
`;

exports[`GradleInstaller installAgent transforms buildscript.gradle.kts as expected 1`] = `
"buildscript {
    repositories {
        mavenCentral()
    }
}

plugins {
    id("com.appland.appmap") version "1.1.0"
}

repositories {
    mavenCentral()
}


application {
    mainClass = 'demo.App'
}
"
`;

exports[`GradleInstaller installAgent transforms buildscript-plugins.gradle as expected 1`] = `
"buildscript {
}

plugins {
  id 'com.appland.appmap' version '1.1.0'
}

repositories {
  mavenCentral()
}
"
`;

exports[`GradleInstaller installAgent transforms buildscript-plugins.gradle.kts as expected 1`] = `
"buildscript {
}

plugins {
  id("com.appland.appmap") version "1.1.0"
}

repositories {
  mavenCentral()
}
"
`;

exports[`GradleInstaller installAgent transforms empty.gradle as expected 1`] = `
"/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn more about Gradle by exploring our samples at https://docs.gradle.org/7.2/samples
 */


plugins {
  id 'com.appland.appmap' version '1.1.0'
}

repositories {
  mavenCentral()
}
"
`;

exports[`GradleInstaller installAgent transforms empty.gradle.kts as expected 1`] = `
"/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn more about Gradle by exploring our samples at https://docs.gradle.org/7.2/samples
 */


plugins {
  id("com.appland.appmap") version "1.1.0"
}

repositories {
  mavenCentral()
}
"
`;

exports[`GradleInstaller installAgent transforms existing-appmap.gradle as expected 1`] = `
"plugins {
  id 'com.appland.appmap' version '1.1.0'
}

repositories {
  mavenCentral()
}
"
`;

exports[`GradleInstaller installAgent transforms existing-appmap.gradle.kts as expected 1`] = `
"plugins {
  id("com.appland.appmap") version "1.1.0"
}

repositories {
  mavenCentral()
}
"
`;

exports[`GradleInstaller installAgent transforms extra-repo-block.gradle as expected 1`] = `
"// This is a comment before the plugins block.
plugins {
  id 'java'
  id 'com.appland.appmap' version '1.1.0'
}
repositories {
  mavenCentral()
}


// This is a comment after the plugins block

subprojects {
}

allprojects {
  repositories {
    google()
  }
}
"
`;

exports[`GradleInstaller installAgent transforms extra-repo-block.gradle.kts as expected 1`] = `
"// This is a comment before the plugins block.
plugins {
  java
  id("com.appland.appmap") version "1.1.0"
}
repositories {
  mavenCentral()
}


// This is a comment after the plugins block

subprojects {
}

allprojects {
  repositories {
    google()
  }
}
"
`;

exports[`GradleInstaller installAgent transforms no-maven.gradle as expected 1`] = `
"// This is a comment before the plugins block.
plugins {
  id 'java'
  id 'com.appland.appmap' version '1.1.0'
}

repositories {
  google()
  mavenCentral()
}
"
`;

exports[`GradleInstaller installAgent transforms no-maven.gradle.kts as expected 1`] = `
"// This is a comment before the plugins block.
plugins {
  java
  id("com.appland.appmap") version "1.1.0"
}

repositories {
  google()
  mavenCentral()
}
"
`;

exports[`GradleInstaller installAgent transforms no-plugins.gradle as expected 1`] = `
"

plugins {
  id 'com.appland.appmap' version '1.1.0'
}
repositories {
  mavenCentral()
}
"
`;

exports[`GradleInstaller installAgent transforms no-plugins.gradle.kts as expected 1`] = `
"

plugins {
  id("com.appland.appmap") version "1.1.0"
}
repositories {
  mavenCentral()
}
"
`;

exports[`GradleInstaller installAgent transforms plugins.gradle as expected 1`] = `
"// This is a comment before the plugins block.
plugins {
  id 'java'
  id 'com.appland.appmap' version '1.1.0'
}

repositories {
  mavenCentral()
}
"
`;

exports[`GradleInstaller installAgent transforms plugins.gradle.kts as expected 1`] = `
"// This is a comment before the plugins block.
plugins {
  java
  id("com.appland.appmap") version "1.1.0"
}

repositories {
  mavenCentral()
}
"
`;
